--- a/package.json
+++ b/package.json
@@ -9,12 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.5",
     "@types/node": "20.3.1",
     "@types/react": "18.2.12",
     "@types/react-dom": "18.2.5",
+    "axios": "^1.4.0",
+    "debug": "^4.3.4",
     "next": "13.4.5",
+    "next-redux-wrapper": "^8.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-redux": "^8.1.1",
+    "redux": "^4.2.1",
+    "redux-actions": "^3.0.0",
+    "redux-saga": "^1.2.3",
+    "sass": "^1.63.6",
+    "supports-color": "^8.1.1",
     "typescript": "5.1.3"
   }
 }
